Refactor registration and login templates for consistency and clarity
- Updated titles and headings in registration/edit.html and registration/signup.html to use "Edit account" and "Subscribe" respectively.
- Changed "Sign up" to "Subscribe" in various templates for uniformity.
- Modified links to use {% pageurl home %} for better routing.
- Enhanced the layout of the profile page and adjusted spacing in the articles list.
- Improved sidebar and navbar components for better user experience and accessibility.
- Added conditional rendering for authenticated users in the articles list.

--- a/tcn/ui/templates/registration/edit.html
+++ b/tcn/ui/templates/registration/edit.html
@@ -1,11 +1,11 @@
 {% extends 'registration/form.html' %}{% load i18n %}
 
 <!---->
-{% block title %}{{ block.super }} | {% trans 'Settings' %}{% endblock %}
+{% block title %}{{ block.super }} | {% trans 'Edit account' %}{% endblock %}
 
 <!---->
 {% block form_content %}
 <h1 class="text-primary text-xl font-semibold lg:text-4xl">
-  {% trans 'Settings' %}
+  {% trans 'Edit account' %}
 </h1>
 {% endblock %}
