--- a/tcn/ui/templates/registration/password_reset_confirm.html
+++ b/tcn/ui/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{% trans 'Password Reset Confirm' %}{% endblock %}
@@ -15,9 +15,12 @@
         data-tip="{% trans 'The Certain News' %}"
       >
         <h1 class="relative">
-          <a href="/" class="btn btn-square btn-primary lg:btn-lg">
+          <a
+            href="{% pageurl home %}"
+            class="btn btn-square btn-primary lg:btn-lg"
+          >
             <div
-              class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
+              class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
             >
               <i
                 data-lucide="scroll-text"
