--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -1,248 +1,19 @@
 {% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
-{% block title %}{% trans 'Profile' %}{% endblock %}
-
-<!---->
-{% block navbar %}{% endblock %}
+{% block title %}{{ block.super }} | {% trans 'Profile' %}{% endblock %}
 
 <!---->
 {% block content %}
-<div class="drawer drawer-end lg:drawer-open">
+<div class="drawer drawer-end">
   <input id="profile-drawer" type="checkbox" class="drawer-toggle sr-only" />
 
-  <div
-    class="drawer-content size-full overflow-y-auto lg:max-h-[calc(100dvh-1rem)]"
-  >
-    <div class="relative container py-20 px-4 lg:px-8 mx-auto">
+  <div class="drawer-content size-full overflow-y-auto">
+    <div class="relative container py-20 px-4 mx-auto">
       <main class="flex flex-col gap-4 lg:gap-6">
-        <header
-          class="absolute inset-x-0 top-0 z-40 px-2 backdrop-blur-3xl lg:px-4"
-        >
-          <nav class="navbar p-4">
-            <div class="navbar-start gap-4">
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-primary z-10"
-                data-tip="{% trans 'Open drawer' %}"
-              >
-                <label
-                  for="nav-drawer"
-                  aria-label="{% trans 'close sidebar' %}"
-                  class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="menu" class="size-4 md:size-6"></i>
-                  <span class="sr-only"> {% trans 'Open drawer' %} </span>
-                </label>
-              </div>
-
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
-                data-tip="{% trans 'The Certain News' %}"
-              >
-                <h1 class="relative">
-                  <a
-                    href="{% pageurl home %}"
-                    class="btn btn-square btn-primary lg:btn-lg"
-                  >
-                    <div
-                      class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
-                    >
-                      <i
-                        data-lucide="scroll-text"
-                        class="-rotate-45 lg:size-8 2xl:size-10"
-                      ></i>
-                    </div>
-                    <span class="sr-only">
-                      {% trans 'The Certain News' %}
-                    </span>
-                  </a>
-                </h1>
-              </div>
-
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-error"
-                data-tip="{% trans 'Breaking' %}"
-              >
-                <a
-                  href="{% url 'ui:articles' %}?is_breaking=True"
-                  class="btn btn-square btn-sm btn-error animate-pulse md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="alert-circle" class="size-4 md:size-6"></i>
-                  <span class="sr-only"> {% trans 'Breaking' %} </span>
-                </a>
-              </div>
-
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
-                data-tip="{% trans 'Latest news' %}"
-              >
-                <a
-                  href="{% url 'ui:articles' %}"
-                  class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="clock-fading" class="size-4 md:size-6"></i>
-                  <span class="sr-only">{% trans 'Latest news' %}</span>
-                </a>
-              </div>
-            </div>
-
-            <div class="navbar-end gap-2">
-              {% if request.user.is_authenticated %}
-              <div
-                class="tooltip tooltip-left rtl:tooltip-right tooltip-primary sm:hidden"
-                data-tip="{% trans 'Profile' %}"
-              >
-                <a
-                  href="{% url 'ui:profile' %}"
-                  class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="user" class="size-4 md:size-6"></i>
-                  <span class="sr-only">{% trans 'Profile' %}</span>
-                </a>
-              </div>
-              {% else %}
-              <div
-                class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
-                data-tip="{% trans 'Log in' %}"
-              >
-                <a
-                  href="{% url 'ui:login' %}"
-                  class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="log-in" class="size-4 md:size-6"></i>
-                  <span class="sr-only">{% trans 'Log in' %}</span>
-                </a>
-              </div>
-              <div
-                class="tooltip tooltip-left rtl:tooltip-right tooltip-success"
-                data-tip="{% trans 'Sign up' %}"
-              >
-                <a
-                  href="{% url 'ui:subscribe' %}"
-                  class="btn btn-square btn-soft btn-sm btn-success md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="heart-handshake" class="size-4 md:size-6"></i>
-                  <span class="sr-only">{% trans 'Sign up' %}</span>
-                </a>
-              </div>
-              {% endif %}
-
-              <div
-                class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
-                data-tip="{% translate 'Language' %}"
-              >
-                <button
-                  popovertarget="language"
-                  style="anchor-name: --language"
-                  class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="languages" class="size-4 md:size-6"></i>
-
-                  <span class="sr-only">{% translate 'Language' %}</span>
-                </button>
-
-                <ul
-                  id="language"
-                  popover
-                  style="position-anchor: --language"
-                  class="menu dropdown dropdown-bottom bg-base-100/75 dark:bg-base-100/50 dropdown-left rounded-box backdrop-blur-3xl text-base-content shadow-xl rtl:dropdown-right"
-                >
-                  <li class="menu-title">{% translate 'Language' %}</li>
-                  <form
-                    id="lang-form"
-                    class="hidden"
-                    action="{% url 'set_language' %}"
-                    method="post"
-                  >
-                    {% csrf_token %}
-                    <input
-                      name="next"
-                      type="hidden"
-                      value="{{ redirect_to }}"
-                    />
-                  </form>
-                  <!---->
-                  {% get_available_languages as LANGS %}
-                  <!---->
-                  {% get_language_info_list for LANGS as langs %}
-                  <!---->
-                  {% for language in langs %}
-                  <li>
-                    <label
-                      class="flex flex-row items-center justify-between gap-6"
-                    >
-                      <div class="flex flex-row items-center gap-2">
-                        <input
-                          form="lang-form"
-                          type="submit"
-                          name="language"
-                          value="{{ language.code|upper }}"
-                          aria-label="{{ language.name_local }} ({{ language.code }})"
-                        />
-                        <span>
-                          {{ language.name_local }}
-                          <!---->
-                          ({{ language.code }})
-                        </span>
-                      </div>
-                      {% if language.code == LANGUAGE_CODE %}
-                      <i data-lucide="check" class="size-4 md:size-6"></i>
-                      {% endif %}
-                    </label>
-                  </li>
-                  {% endfor %}
-                </ul>
-              </div>
-
-              <form
-                method="get"
-                action="{% url 'ui:search' %}"
-                class="hidden lg:block"
-              >
-                <label
-                  class="mx-auto max-w-xl w-full bg-transparent input input-primary 2xl:input-lg"
-                >
-                  <i
-                    data-lucide="search"
-                    class="size-4 text-primary md:size-6"
-                  ></i>
-                  <input
-                    required
-                    type="search"
-                    name="search"
-                    class="grow placeholder-primary"
-                    placeholder="{% trans 'Search' %}"
-                  />
-
-                  <button
-                    type="submit"
-                    class="btn btn-square btn-soft btn-sm btn-primary"
-                  >
-                    <i data-lucide="check-circle2" class="size-4 md:size-6"></i>
-                    <span class="sr-only">{% trans 'Search' %}</span>
-                  </button>
-                </label>
-              </form>
-
-              <div
-                class="tooltip tooltip-left rtl:tooltip-right tooltip-primary lg:hidden"
-                data-tip="{% trans 'Search' %}"
-              >
-                <a
-                  href="{% url 'ui:search' %}"
-                  class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
-                >
-                  <i data-lucide="search" class="size-4 md:size-6"></i>
-                  <span class="sr-only">{% trans 'Search' %}</span>
-                </a>
-              </div>
-            </div>
-          </nav>
-        </header>
-
         <nav class="flex items-center gap-4">
           <div
-            class="tooltip tooltip-right tooltip-primary rtl:tooltip-left lg:hidden"
+            class="tooltip tooltip-right tooltip-primary rtl:tooltip-left"
             data-tip="{% trans 'Open drawer' %}"
           >
             <label
@@ -250,7 +21,7 @@
               aria-label="{% trans 'Open drawer' %}"
               class="btn btn-sm btn-square btn-soft btn-primary lg:btn-md"
             >
-              <i data-lucide="menu" class="size-4 md:size-6"></i>
+              <i data-lucide="menu" class="size-4 lg:size-6"></i>
               <span class="sr-only">{% trans 'Open drawer' %}</span>
             </label>
           </div>
@@ -269,9 +40,7 @@
     </div>
   </div>
 
-  <div
-    class="drawer-side z-50 md:min-w-xs lg:min-w-sm xl:min-w-md 2xl:min-w-lg lg:z-20 lg:max-h-[calc(100dvh-1rem)]"
-  >
+  <div class="drawer-side z-50">
     <label
       for="profile-drawer"
       aria-label="{% trans 'Close drawer' %}"
@@ -279,7 +48,7 @@
     ></label>
 
     <section
-      class="bg-base-100/75 dark:bg-base-100/50 flex size-full flex-col justify-between overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-full lg:bg-base-200"
+      class="bg-base-100/75 dark:bg-base-100/50 flex size-full flex-col overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-1/3 2xl:w-1/4"
     >
       <header class="flex items-center justify-between gap-4 p-4">
         <div
@@ -287,9 +56,12 @@
           data-tip="{% trans 'Profile' %}"
         >
           <h1 class="relative">
-            <a href="/" class="btn btn-square btn-primary lg:btn-lg">
+            <a
+              href="{% pageurl home %}"
+              class="btn btn-square btn-primary lg:btn-lg"
+            >
               <div
-                class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
+                class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
               >
                 <i
                   data-lucide="scroll-text"
@@ -301,74 +73,63 @@
           </h1>
         </div>
 
-        <div
-          class="tooltip tooltip-left rtl:tooltip-right hover:tooltip-error lg:hidden"
-          data-tip="{% trans 'Close' %}"
-        >
-          <label
-            for="profile-drawer"
-            aria-label="{% trans 'Close drawer' %}"
-            class="btn btn-square btn-soft btn-sm btn-primary hover:btn-error lg:btn-md"
+        <div class="flex items-center gap-2 lg:gap-4">
+          <div
+            class="tooltip tooltip-left tooltip-error rtl:tooltip-right"
+            data-tip="{% trans 'Log out' %}"
           >
-            <i data-lucide="x" class="size-4 md:size-6"></i>
-            <span class="sr-only">{% trans 'Close' %}</span>
-          </label>
+            <button
+              type="submit"
+              form="logout"
+              class="btn btn-square btn-soft btn-sm btn-error md:btn-md 2xl:btn-lg"
+            >
+              <i data-lucide="log-out" class="size-4 lg:size-6"></i>
+              <span class="sr-only">{% trans 'Log out' %}</span>
+            </button>
+          </div>
+
+          <div
+            class="tooltip tooltip-left rtl:tooltip-right"
+            data-tip="{% trans 'Close' %}"
+          >
+            <label
+              for="profile-drawer"
+              aria-label="{% trans 'close sidebar' %}"
+              class="btn btn-square btn-sm btn-ghost md:btn-md 2xl:btn-lg"
+            >
+              <i data-lucide="x" class="size-4 lg:size-6"></i>
+              <span class="sr-only">{% trans 'Close' %}</span>
+            </label>
+          </div>
         </div>
       </header>
 
-      <nav class="menu menu-vertical gap-2 size-full justify-between p-4">
-        <ul class="menu menu-vertical gap-2 w-full p-0">
-          <li>
-            <a
-              href="{% url 'ui:profile' %}"
-              class="btn btn-ghost btn-primary justify-start gap-4 w-full"
-            >
-              <i data-lucide="user" class="size-4 md:size-6"></i>
-              <span>{% trans 'Profile' %}</span>
-            </a>
-          </li>
-          <li>
-            <a
-              href="{% url 'ui:u-user' request.user.slug %}"
-              class="btn btn-ghost btn-primary justify-start gap-4 w-full"
-            >
-              <i data-lucide="user-cog" class="size-4 md:size-6"></i>
-              <span>{% trans 'Settings' %}</span>
-            </a>
-          </li>
-          <li>
-            <a
-              href="{% url 'ui:password_change' %}"
-              class="btn btn-ghost btn-primary justify-start gap-4 w-full"
-            >
-              <i data-lucide="rotate-ccw-key" class="size-4 md:size-6"></i>
-              <span>{% trans 'Change Password' %}</span>
-            </a>
-          </li>
-        </ul>
-
-        <ul class="mt-auto menu menu-vertical gap-2 w-full p-0">
-          <li>
-            <a
-              href="{% url 'ui:d-user' request.user.slug %}"
-              class="btn btn-soft btn-error justify-start gap-4 w-full"
-            >
-              <i data-lucide="user-x" class="size-4 md:size-6"></i>
-              <span>{% trans 'Delete account' %}</span>
-            </a>
-          </li>
-          <li>
-            <button
-              form="logout"
-              type="submit"
-              class="btn btn-ghost btn-primary justify-start gap-4 w-full"
-            >
-              <i data-lucide="log-out" class="size-4 md:size-6"></i>
-              <span>{% trans 'Log out' %}</span>
-            </button>
-          </li>
-        </ul>
-      </nav>
+      <ul class="menu menu-vertical w-full">
+        <li>
+          <a href="{% url 'ui:profile' %}">
+            <i data-lucide="user" class="size-4 lg:size-6"></i>
+            <span>{% trans 'Profile' %}</span>
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'ui:password_change' %}">
+            <i data-lucide="rotate-ccw-key" class="size-4 lg:size-6"></i>
+            <span>{% trans 'Change Password' %}</span>
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'ui:u-user' request.user.slug %}">
+            <i data-lucide="user-pen" class="size-4 lg:size-6"></i>
+            <span>{% trans 'Edit account' %}</span>
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'ui:d-user' request.user.slug %}">
+            <i data-lucide="user-x" class="size-4 lg:size-6"></i>
+            <span>{% trans 'Delete account' %}</span>
+          </a>
+        </li>
+      </ul>
     </section>
   </div>
 </div>
