--- a/tcn/ui/templates/registration/logged_out.html
+++ b/tcn/ui/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base.html' %}{% load i18n %}
+{% extends 'registration/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Logged out' %}{% endblock %}
@@ -15,9 +15,12 @@
         data-tip="{% trans 'The Certain News' %}"
       >
         <h1 class="relative">
-          <a href="/" class="btn btn-square btn-primary lg:btn-lg">
+          <a
+            href="{% pageurl home %}"
+            class="btn btn-square btn-primary lg:btn-lg"
+          >
             <div
-              class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
+              class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
             >
               <i
                 data-lucide="scroll-text"
@@ -40,7 +43,7 @@
           {% trans 'Log in' %}
         </a>
         <a href="{% url 'ui:subscribe' %}" class="btn btn-soft btn-primary">
-          {% trans 'Sign up' %}
+          {% trans 'Subscribe' %}
         </a>
       </div>
     </main>
