--- a/tcn/ui/templates/registration/signup.html
+++ b/tcn/ui/templates/registration/signup.html
@@ -1,7 +1,7 @@
-{% extends 'ui/base.html' %}{% load i18n %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
-{% block title %}{{ block.super }} | {% trans 'Sign up' %}{% endblock %}
+{% block title %}{{ block.super }} | {% trans 'Subscribe' %}{% endblock %}
 
 <!---->
 {% block content %}
@@ -15,9 +15,12 @@
         data-tip="{% trans 'The Certain News' %}"
       >
         <h1 class="relative">
-          <a href="/" class="btn btn-square btn-primary lg:btn-lg">
+          <a
+            href="{% pageurl home %}"
+            class="btn btn-square btn-primary lg:btn-lg"
+          >
             <div
-              class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
+              class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
             >
               <i
                 data-lucide="scroll-text"
@@ -31,7 +34,7 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">{% trans 'Sign up' %}</h2>
+      <h2 class="card-title text-primary">{% trans 'Subscribe' %}</h2>
 
       <p>{% trans 'Welcome, please signup to continue.' %}</p>
 
