--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -61,6 +61,11 @@
     <!---->
     {% block styles %}
     <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
       href="{% static 'ui/css/styles.css' %}"
       rel="stylesheet"
       type="text/css"
