--- a/tcn/ui/templates/careers/base.html
+++ b/tcn/ui/templates/careers/base.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}{% load i18n static wagtailcore_tags %}
+{% extends 'careers/base.html' %}{% load i18n static wagtailcore_tags %}
 
 <!---->
 {% block branding %}
 <li
   class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
-  data-tip="{% trans 'The Certain News' %} | {% trans 'Blog' %}"
+  data-tip="{% trans 'The Certain News' %} | {% trans 'Careers' %}"
 >
   <h1 class="relative">
     <a href="{% pageurl home %}" class="btn btn-square btn-primary lg:btn-lg">
@@ -17,7 +17,7 @@
         ></i>
       </div>
       <span class="sr-only">
-        {% trans 'The Certain News' %} | {% trans 'Blog' %}
+        {% trans 'The Certain News' %} | {% trans 'Careers' %}
       </span>
     </a>
   </h1>
@@ -87,7 +87,7 @@
   data-tip="{% trans 'Search' %}"
 >
   <a
-    href="{% url 'blog:search' %}"
+    href="{% url 'careers:search' %}"
     class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
   >
     <i data-lucide="search" class="size-4 md:size-6"></i>
@@ -100,7 +100,7 @@
 {% block drawer_branding %}
 <div
   class="tooltip tooltip-right rtl:tooltip-left tooltip-primary tooltip-open"
-  data-tip="{% trans 'The Certain News' %} | {% trans 'Blog' %}"
+  data-tip="{% trans 'The Certain News' %} | {% trans 'Careers' %}"
 >
   <h1 class="relative">
     <a href="{% pageurl home %}" class="btn btn-square btn-primary lg:btn-lg">
@@ -113,7 +113,7 @@
         ></i>
       </div>
       <span class="sr-only">
-        {% trans 'The Certain News' %} | {% trans 'Blog' %}
+        {% trans 'The Certain News' %} | {% trans 'Careers' %}
       </span>
     </a>
   </h1>
